<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mini project timer step counter...thingy</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="back_to_timer">Back to Timer</string>
    <string name="to_results">To Results</string>
    <string name="show_run">Show Run</string>
    <string name="todays_date_is">Todays date is:</string>
    <string name="date">Date</string>
    <string name="you_ran">You ran:</string>
    <string name="time">Time</string>
    <string name="steps">Steps</string>
    <string name="time2">Time:</string>
    <string name="steps2">Steps:</string>
    <string name="steps1">Steps:</string>
    <string name="button3">Button</string>
    <string name="start">Start</string>
    <string name="button">Button</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="backbutton">Button</string>
    <string name="on_this_run">On this run:</string>
    <string name="and_burned">And burned:</string>
    <string name="textview">TextView</string>
    <string name="inText">In:</string>
    <string name="congratulations">Congratulations!</string>
    <string name="in">in</string>
    <string name="youran">You ran:</string>
</resources>